--- a/home.html
+++ b/home.html
@@ -47,16 +47,18 @@
   <!-- HERO with your uploaded image -->
   <section class="hero">
     <!-- IMPORTANT: uyu path ugomba guhuza n’ayo washyize muri repo: images/EIDS5199.JPG -->
-    <img src="images/EIDS5199.JPG" alt="Les NGANYIRA family hero" width="1600" height="600" onerror="this.src='images/placeholder.jpg'"/>
-    <div class="overlay">
-      <h1>United for our future</h1>
-      <p>Tuzigama, dufashanye, dukura hamwe.</p>
-      <div class="btn-row">
-        <a href="contribute.html" class="btn">Make a Contribution</a>
-        <a href="services.html" class="btn secondary">See Services</a>
-      </div>
+    <section class="hero">
+  <img src="./images/EIDS5199.JPG" alt="Les NGANYIRA family hero" width="1600" height="600" />
+  <div class="overlay">
+    <h1>United for our future</h1>
+    <p>Tuzigama, dufashanye, dukura hamwe.</p>
+    <div class="btn-row">
+      <a href="contribute.html" class="btn">Make a Contribution</a>
+      <a href="services.html" class="btn secondary">See Services</a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <div class="auth-card" style="margin-top:16px;">
     <h2>Welcome</h2>
