--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
   <section class="hero">
     <!-- IMPORTANT: uyu path ugomba guhuza n’ayo washyize muri repo: images/EIDS5199.JPG -->
     <section class="hero">
-  <img src="./images/eidS5199.JPG" alt="Les NGANYIRA family hero" width="1600" height="600" />
+  <img src="C:\Users\bruce\OneDrive\Pictures\Saved Pictures" alt="Les NGANYIRA family hero" width="1600" height="600" />
   <div class="overlay">
     <h1>United for our future</h1>
     <p>Tuzigama, dufashanye, dukura hamwe.</p>
