--- a/home.html
+++ b/home.html
@@ -48,10 +48,10 @@
   <section class="hero">
     <!-- IMPORTANT: uyu path ugomba guhuza n’ayo washyize muri repo: images/EIDS5199.JPG -->
     <section class="hero">
-  <img src="C:\Users\bruce\OneDrive\Pictures\Saved Pictures" alt="Les NGANYIRA family hero" width="1600" height="600" />
+  <img src="C:\Users\bruce\OneDrive\Pictures\Saved Pictures" alt="Les NGANYIRA family hero" width="1600" height="1200" />
   <div class="overlay">
     <h1>United for our future</h1>
-    <p>Tuzigama, dufashanye, dukura hamwe.</p>
+    <p>Tuzigame, dufashanye, dukure hamwe.</p>
     <div class="btn-row">
       <a href="contribute.html" class="btn">Make a Contribution</a>
       <a href="services.html" class="btn secondary">See Services</a>
